// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PageSection snapshot 1`] = `
<styled__Container>
  <styled__Title>
    Hello, world!
  </styled__Title>
</styled__Container>
`;

exports[`components/PageSection snapshot with description 1`] = `
<styled__Container>
  <styled__Title>
    Hello, world!
  </styled__Title>
  <styled__Description>
    This is some support copy
  </styled__Description>
</styled__Container>
`;
